# film-recommendation-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
app/: main.py  settings.py
app/agent/: agent.py  templates.py
app/bot/: bot_core.py
app/clients/: openai.py  scheduled_tasks.py  sqlite.py  tmdb.py
app/schemas/: schemas.py
tests/: locustfile.py  test_input_length.py
